[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "muni-md"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "typer",
    "rich",
]

[project.scripts]
muni = "muni.cli:main"

[tool.setuptools.packages.find]
where = ["."]